# binance-sync-account

./: .gitignore  Cargo.toml  README.md
src/: lib.rs
src/api/: account.rs  mod.rs
src/api/binance/: account.rs  mod.rs
src/api/binance/spot/: account.rs  depth.rs  klines.rs  mod.rs  trades.rs
src/api/binance/spot/order/: cancel.rs  create.rs  mod.rs  opened.rs  status.rs
src/db/: mod.rs  postgres.rs
src/db/postgres/: account.rs  connect.rs  mod.rs
src/stream/: mod.rs  public.rs  userdata.rs
src/stream/binance/: mod.rs  public.rs  userdata.rs
src/stream/binance/spot/: mod.rs
src/stream/handlers/: spot.rs
src/utils/: convert.rs  env.rs  mod.rs  request.rs
tests/: binance_order_flow.rs
