[package]
name = "binance-sync-account"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.6"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "macros", "uuid", "chrono"] }
tokio = { version = "1.46.0", features = ["full"] }
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
serde_urlencoded = "0.7"
reqwest = "0.12.23"
chrono = "0.4.42"
dotenvy = "0.15.7"
base64 = "0.21"
ed25519-dalek = { version = "2.0.1", features = ["pkcs8"] }
urlencoding = "2.1"
pkcs8 = "0.10.2"
serde = "1.0.228"
serde_json = "1.0.145"